* review comments changes

--- a/test/integration/targets/iosxr_interface/tests/netconf/basic.yaml
+++ b/test/integration/targets/iosxr_interface/tests/netconf/basic.yaml
@@ -182,6 +182,20 @@
     that:
       - 'result.changed == true'
 
+- name: Disable interface aggregate (idempotent)
+  iosxr_interface:
+    aggregate:
+      - name: GigabitEthernet0/0/0/0
+      - name: GigabitEthernet0/0/0/1
+    enabled: False
+    state: present
+    provider: "{{ netconf }}"
+  register: result
+
+- assert:
+    that:
+      - 'result.changed == false'
+
 - name: Enable interface aggregate
   iosxr_interface:
     aggregate:
@@ -195,6 +209,20 @@
 - assert:
     that:
       - 'result.changed == true'
+
+- name: Enable interface aggregate
+  iosxr_interface:
+    aggregate:
+      - name: GigabitEthernet0/0/0/0
+      - name: GigabitEthernet0/0/0/1
+    enabled: True
+    state: present
+    provider: "{{ netconf }}"
+  register: result
+
+- assert:
+    that:
+      - 'result.changed == false'
 
 - name: interface aggregate (setup)
   iosxr_interface:
