Use an appropriate regex to sanitize hostname.
Valid characters for FQDNs are `[a-z0-9\.\-]`. The `to_safe()` method replaces the valid characters `.` and `-` with the invalid character `_`.

Fixes #21167

--- a/contrib/inventory/ec2.ini
+++ b/contrib/inventory/ec2.ini
@@ -34,6 +34,7 @@ destination_variable = public_dns_name
 # This allows you to override the inventory_name with an ec2 variable, instead
 # of using the destination_variable above. Addressing (aka ansible_ssh_host)
 # will still use destination_variable. Tags should be written as 'tag_TAGNAME'.
+# Invalid characters in the tag or instance variable will be stripped.
 #hostname_variable = tag_Name
 
 # For server inside a VPC, using DNS names may not make sense. When an instance
