Slight restructuring to make eapi easier later on
* Move eapi toggle to prepare_eos
* Pull out connection on eapi tasks

--- a/test/integration/targets/prepare_eos_tests/tasks/main.yml
+++ b/test/integration/targets/prepare_eos_tests/tasks/main.yml
@@ -15,3 +15,13 @@
     parents: int Ethernet2
   become: yes
   connection: network_cli
+
+- name: enable eapi
+  eos_eapi:
+    http: yes
+    https: yes
+    local_http: no
+    enable_socket: yes
+  become: yes
+  connection: network_cli
+  tags: eapi
