Adding support for vApp properties.
    List of supported fields can be found here:
    https://github.com/vmware/pyvmomi/blob/master/docs/vim/vApp/PropertySpec.rst
    https://github.com/vmware/pyvmomi/blob/master/docs/vim/vApp/PropertyInfo.rst

    Example:

                "vapp_properties": [
                    {
                        "id": "some_property_to_remove",
                        "operation": "remove"
                    },
                    {
                        "category": "Backup",
                        "label": "Backup server IP",
                        "id": "backupserver.address",
                        "type": "string",
                        "value": "10.0.0.10"
                    }

                 ]

--- a/test/integration/targets/vmware_guest/tasks/main.yml
+++ b/test/integration/targets/vmware_guest/tasks/main.yml
@@ -25,3 +25,4 @@
 - include: disk_type_d1_c1_f0.yml
 - include: create_nw_d1_c1_f0.yml
 #- include: template_d1_c1_f0.yml
+- include: vapp_d1_c1_f0.yml
