--- a/test/integration/targets/ios_linkagg/tests/cli/basic.yaml
+++ b/test/integration/targets/ios_linkagg/tests/cli/basic.yaml
@@ -1,11 +1,12 @@
 #---
-#- debug: msg="START cli/basic.yaml"
+#- debug: msg="START cli/basic.yaml on connection={{ ansible_connection }}"
 
 #- name: setup - remove config used in test(part1)
 #  ios_config:
 #    lines:
 #      - no interface port-channel 20
 #    authorize: yes
+#  become: yes
 #  ignore_errors: yes
 
 #- name: setup - remove config used in test(part2)
@@ -13,6 +14,7 @@
 #    lines:
 #      - no interface port-channel 5
 #    authorize: yes
+#  become: yes
 #  ignore_errors: yes
 
 #- name: setup - remove config used in test(part3)
@@ -21,15 +23,17 @@
 #      - no channel-group 20 mode active
 #    authorize: yes
 #    parents: "{{ item }}"
-#  with_items:
+#  loop:
 #    - interface GigabitEthernet0/1
 #    - interface GigabitEthernet0/2
+#  become: yes
 
 #- name: create linkagg
 #  ios_linkagg: &create
 #    group: 20
 #    state: present
 #    authorize: yes
+#  become: yes
 #  register: result
 
 #- assert:
@@ -39,6 +43,7 @@
 
 #- name: create linkagg(Idempotence)
 #  ios_linkagg: *create
+#  become: yes
 #  register: result
 
 #- assert:
@@ -53,6 +58,7 @@
 #      - GigabitEthernet0/1
 #      - GigabitEthernet0/2
 #    authorize: yes
+#  become: yes
 #  register: result
 
 #- assert:
@@ -65,6 +71,7 @@
 
 #- name: set link aggregation group to members(Idempotence)
 #  ios_linkagg: *configure_member
+#  become: yes
 #  register: result
 
 #- assert:
@@ -78,6 +85,7 @@
 #    members:
 #      - GigabitEthernet0/2
 #    authorize: yes
+#  become: yes
 #  register: result
 
 #- assert:
@@ -88,6 +96,7 @@
 
 #- name: remove link aggregation group from member(Idempotence)
 #  ios_linkagg: *remove_member
+#  become: yes
 #  register: result
 
 #- assert:
@@ -99,6 +108,7 @@
 #    group: 20
 #    state: absent
 #    authorize: yes
+#  become: yes
 #  register: result
 
 #- assert:
@@ -108,6 +118,7 @@
 
 #- name: remove linkagg(Idempotence)
 #  ios_linkagg: *remove
+#  become: yes
 #  register: result
 
 #- assert:
@@ -120,6 +131,7 @@
 #      - { group: 5 }
 #      - { group: 20, mode: active, members: ['GigabitEthernet0/1'] }
 #    authorize: yes
+#  become: yes
 #  register: result
 
 #- assert:
@@ -132,6 +144,7 @@
 
 #- name: create aggregate of linkagg definitions(Idempotence)
 #  ios_linkagg: *create_agg
+#  become: yes
 #  register: result
 
 #- assert:
@@ -143,6 +156,7 @@
 #    lines:
 #      - no interface port-channel 20
 #    authorize: yes
+#  become: yes
 #  ignore_errors: yes
 
 #- name: teardown(part2)
@@ -150,6 +164,7 @@
 #    lines:
 #      - no interface port-channel 5
 #    authorize: yes
+#  become: yes
 #  ignore_errors: yes
 
 #- name: teardown(part3)
@@ -158,8 +173,9 @@
 #      - no channel-group 20 mode active
 #    authorize: yes
 #    parents: "{{ item }}"
-#  with_items:
+#  loop:
 #    - interface GigabitEthernet0/1
 #    - interface GigabitEthernet0/2
+#  become: yes
 
-#- debug: msg="END cli/basic.yaml"
+#- debug: msg="END cli/basic.yaml on connection={{ ansible_connection }}"
