Add inventory cache

--- a/contrib/inventory/consul_io.ini
+++ b/contrib/inventory/consul_io.ini
@@ -28,7 +28,7 @@ servers_suffix = _servers
 suffixes = true
 
 # if specified then the inventory will generate domain names that will resolve
-# via Consul's inbuilt DNS. 
+# via Consul's inbuilt DNS.
 #domain=consul
 
 # make groups from service tags. the name of the group is derived from the
@@ -52,3 +52,11 @@ kv_metadata=ansible/metadata
 availability = true
 available_suffix = _up
 unavailable_suffix = _down
+
+#
+# If consul_io.py needs to be executed very often its answer can be cached.
+#
+cache=false
+cache_ttl=30
+# Cache key name
+kv_cache=ansible/inventory_cache
