--- a/test/integration/targets/ios_command/tests/cli/invalid.yaml
+++ b/test/integration/targets/ios_command/tests/cli/invalid.yaml
@@ -1,10 +1,11 @@
 ---
-- debug: msg="START cli/invalid.yaml"
+- debug: msg="START cli/invalid.yaml on connection={{ ansible_connection }}"
 
 - name: run invalid command
   ios_command:
     commands: show foo
     authorize: yes
+  become: yes
   register: result
   ignore_errors: yes
 
@@ -18,6 +19,7 @@
       - show version
       - show foo
     authorize: yes
+  become: yes
   register: result
   ignore_errors: yes
 
@@ -25,4 +27,4 @@
     that:
       - "result.failed"
 
-- debug: msg="END cli/invalid.yaml"
+- debug: msg="END cli/invalid.yaml on connection={{ ansible_connection }}"
