--- a/test/integration/targets/ios_config/tests/cli/save.yaml
+++ b/test/integration/targets/ios_config/tests/cli/save.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/save.yaml"
+- debug: msg="START cli/save.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -10,12 +10,14 @@
       - interface Loopback999
     match: none
     authorize: yes
+  become: yes
 
 
 - name: save config
   ios_config:
     save: true
     authorize: yes
+  become: yes
   register: result
 # FIXME https://github.com/ansible/ansible-modules-core/issues/5008
   ignore_errors: true
@@ -30,6 +32,7 @@
   ios_config:
     save: true
     authorize: yes
+  become: yes
   register: result
 # FIXME https://github.com/ansible/ansible-modules-core/issues/5008
   ignore_errors: true
@@ -41,6 +44,7 @@
       - "no ip http server"
     save_when: modified
     authorize: yes
+  become: yes
   register: result
 
 - name: save should always run
@@ -50,6 +54,7 @@
       - "ip http server"
     save_when: modified
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -61,6 +66,7 @@
     lines:
       - "no ip http server"
     authorize: yes
+  become: yes
   register: result
 
-- debug: msg="END cli/save.yaml"
+- debug: msg="END cli/save.yaml on connection={{ ansible_connection }}"
