--- a/test/integration/targets/ios_facts/tests/cli/invalid_subset.yaml
+++ b/test/integration/targets/ios_facts/tests/cli/invalid_subset.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/invalid_subset.yaml"
+- debug: msg="START cli/invalid_subset.yaml on connection={{ ansible_connection }}"
 
 
 - name: test invalid subset (foobar)
@@ -7,6 +7,7 @@
     gather_subset:
       - "foobar"
     authorize: yes
+  become: yes
   register: result
   ignore_errors: true
 
@@ -30,6 +31,7 @@
       - "!hardware"
       - "hardware"
     authorize: yes
+  become: yes
   register: result
   ignore_errors: true
 
@@ -45,4 +47,4 @@
 
 
 
-- debug: msg="END cli/invalid_subset.yaml"
+- debug: msg="END cli/invalid_subset.yaml on connection={{ ansible_connection }}"
