--- a/test/integration/targets/ios_system/tests/cli/set_domain_list.yaml
+++ b/test/integration/targets/ios_system/tests/cli/set_domain_list.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/set_domain_search.yaml"
+- debug: msg="START cli/set_domain_search.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -8,6 +8,7 @@
       - no ip domain-list redhat.com
     match: none
     authorize: yes
+  become: yes
 
 - name: configure domain_search
   ios_system:
@@ -15,6 +16,7 @@
       - ansible.com
       - redhat.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -29,6 +31,7 @@
       - ansible.com
       - redhat.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -40,6 +43,7 @@
     domain_search:
       - ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -52,6 +56,7 @@
     domain_search:
       - ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -64,6 +69,7 @@
       - ansible.com
       - redhat.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -77,6 +83,7 @@
       - ansible.com
       - redhat.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -89,6 +96,7 @@
       - ansible.com
       - eng.ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -104,6 +112,7 @@
       - ansible.com
       - eng.ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -118,5 +127,6 @@
       - no ip domain-list eng.ansible.com
     match: none
     authorize: yes
+  become: yes
 
-- debug: msg="END cli/set_domain_search.yaml"
+- debug: msg="END cli/set_domain_search.yaml on connection={{ ansible_connection }}"
