--- a/test/integration/targets/ios_command/tests/cli/bad_operator.yaml
+++ b/test/integration/targets/ios_command/tests/cli/bad_operator.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/bad_operator.yaml"
+- debug: msg="START cli/bad_operator.yaml on connection={{ ansible_connection }}"
 
 - name: test bad operator
   ios_command:
@@ -9,6 +9,7 @@
     authorize: yes
     wait_for:
       - "result[0] contains 'Description: Foo'"
+  become: yes
   register: result
   ignore_errors: yes
 
@@ -17,4 +18,4 @@
       - "result.failed == true"
       - "result.msg is defined"
 
-- debug: msg="END cli/bad_operator.yaml"
+- debug: msg="END cli/bad_operator.yaml on connection={{ ansible_connection }}"
