--- a/test/integration/targets/ios_command/tests/cli/output.yaml
+++ b/test/integration/targets/ios_command/tests/cli/output.yaml
@@ -1,11 +1,12 @@
 ---
-- debug: msg="START cli/output.yaml"
+- debug: msg="START cli/output.yaml on connection={{ ansible_connection }}"
 
 - name: get output for single command
   ios_command:
     commands:
       - show version
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -19,6 +20,7 @@
       - show version
       - show interfaces
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -27,4 +29,4 @@
       - "result.stdout is defined"
       - "result.stdout | length == 2"
 
-- debug: msg="END cli/output.yaml"
+- debug: msg="END cli/output.yaml on connection={{ ansible_connection }}"
