--- a/test/integration/targets/ios_command/tests/cli/timeout.yaml
+++ b/test/integration/targets/ios_command/tests/cli/timeout.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/timeout.yaml"
+- debug: msg="START cli/timeout.yaml on connection={{ ansible_connection }}"
 
 - name: test bad condition
   ios_command:
@@ -8,6 +8,7 @@
     authorize: yes
     wait_for:
       - "result[0] contains bad_value_string"
+  become: yes
   register: result
   ignore_errors: yes
 
@@ -16,4 +17,4 @@
       - "result.failed == true"
       - "result.msg is defined"
 
-- debug: msg="END cli/timeout.yaml"
+- debug: msg="END cli/timeout.yaml on connection={{ ansible_connection }}"
