--- a/test/integration/targets/ios_config/tests/cli/sublevel.yaml
+++ b/test/integration/targets/ios_config/tests/cli/sublevel.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/sublevel.yaml"
+- debug: msg="START cli/sublevel.yaml on connection={{ ansible_connection }}"
 
 - name: setup test
   ios_config:
@@ -8,12 +8,14 @@
       - 'no ip access-list standard test'
     match: none
     authorize: yes
+  become: yes
 
 - name: configure sub level command
   ios_config:
     lines: ['permit ip any any log']
     parents: ['ip access-list extended test']
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -27,6 +29,7 @@
     lines: ['permit ip any any log']
     parents: ['ip access-list extended test']
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -39,5 +42,6 @@
       - 'no ip access-list extended test'
     match: none
     authorize: yes
+  become: yes
 
-- debug: msg="END cli/sublevel.yaml"
+- debug: msg="END cli/sublevel.yaml on connection={{ ansible_connection }}"
