--- a/test/integration/targets/ios_system/tests/cli/set_domain_name.yaml
+++ b/test/integration/targets/ios_system/tests/cli/set_domain_name.yaml
@@ -1,16 +1,18 @@
 ---
-- debug: msg="START cli/set_domain_name.yaml"
+- debug: msg="START cli/set_domain_name.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
     lines: no ip domain-name
     match: none
     authorize: yes
+  become: yes
 
 - name: configure domain_name
   ios_system:
     domain_name: eng.ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -21,6 +23,7 @@
   ios_system:
     domain_name: eng.ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -32,5 +35,6 @@
     lines: no ip domain-name
     match: none
     authorize: yes
+  become: yes
 
-- debug: msg="END cli/set_domain_name.yaml"
+- debug: msg="END cli/set_domain_name.yaml on connection={{ ansible_connection }}"
