--- a/test/integration/targets/ios_system/tests/cli/set_lookup_source.yaml
+++ b/test/integration/targets/ios_system/tests/cli/set_lookup_source.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/set_lookup_source.yaml"
+- debug: msg="START cli/set_lookup_source.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -8,11 +8,13 @@
       - vrf definition ansible
     match: none
     authorize: yes
+  become: yes
 
 - name: configure lookup_source
   ios_system:
     lookup_source: Loopback888
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -24,6 +26,7 @@
   ios_system:
     lookup_source: Loopback888
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -34,6 +37,7 @@
   ios_system:
     lookup_enabled: False
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -45,6 +49,7 @@
   ios_system:
     lookup_enabled: True
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -59,6 +64,7 @@
 #        vrf: ansible
 #    authorize: yes
 #    provider: "{{ cli }}"
+#  become: yes
 #  register: result
 #
 #- assert:
@@ -75,6 +81,7 @@
 #        vrf: ansible
 #    authorize: yes
 #    provider: "{{ cli }}"
+#  become: yes
 #  register: result
 #
 #- assert:
@@ -88,7 +95,8 @@
       - no vrf definition ansible
     match: none
     authorize: yes
+  become: yes
   ignore_errors: yes
 # FIXME: Not sure why this is failing with msg": "no vrf definition ansible\r\n% IPv4 and IPv6 addresses from all interfaces in VRF ansible have been removed\r\nfoo(config)#", rc:1
 
-- debug: msg="END cli/set_lookup_source.yaml"
+- debug: msg="END cli/set_lookup_source.yaml on connection={{ ansible_connection }}"
